--- a/r-rock/meta.yaml
+++ b/r-rock/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - {{posix}}zip               # [win]
 
   host:
-    - r-base=3.4.1
+    - r-base
     - bioconductor-genomicranges
     - bioconductor-omiccircos
     - r-dplyr
@@ -46,7 +46,7 @@ requirements:
     - r-vcfr
 
   run:
-    - r-base=3.4.1
+    - r-base
     - bioconductor-genomicranges
     - bioconductor-omiccircos
     - r-dplyr
@@ -78,28 +78,3 @@ about:
   license: MIT + file LICENSE
   summary: Contains functions for bioinformatic analyses.
   license_family: MIT
-
-# The original CRAN metadata for this package was:
-
-# Package: rock
-# Version: 0.0.1
-# Title: Rocking R at UMCCR
-# Description: Contains functions for bioinformatic analyses.
-# Authors@R: person("Peter", "Diakumis", email = "peterdiakumis@gmail.com", role = c("aut", "cre"))
-# URL: https://github.com/umccr/rock
-# BugReports: https://github.com/umccr/rock/issues
-# License: MIT + file LICENSE
-# Encoding: UTF-8
-# LazyData: true
-# ByteCompile: true
-# Remotes: github::umccr/pebbles
-# Depends: R (>= 2.10)
-# Imports: dplyr, GenomicRanges, ggplot2, glue, OmicCircos, pebbles, purrr, readr, rlang (>= 0.1.2), scales, tibble, tidyr, vcfR
-# Roxygen: list(markdown = TRUE)
-# RoxygenNote: 6.1.0
-# Suggests: covr, knitr, rmarkdown, testthat,
-# VignetteBuilder: knitr
-
-# See
-# http://docs.continuum.io/conda/build.html for
-# more information about meta.yaml
