--- a/r-rlogging/meta.yaml
+++ b/r-rlogging/meta.yaml
@@ -29,10 +29,10 @@ requirements:
     - {{posix}}zip               # [win]
 
   host:
-    - r-base=3.4.1
+    - r-base
 
   run:
-    - r-base=3.4.1
+    - r-base
 
 test:
   commands:
