--- a/environment.yaml
+++ b/environment.yaml
@@ -1,66 +1,9 @@
-name: conda-bld
+name: cbuild
 channels:
+  - conda-forge
   - bioconda
   - defaults
 dependencies:
-  - anaconda-client=1.7.2=py37_0
-  - asn1crypto=0.24.0=py37_0
-  - beautifulsoup4=4.6.3=py37_0
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.8.24=py37_1
-  - cffi=1.11.5=py37he75722e_1
-  - chardet=3.0.4=py37_1
-  - click=6.7=py37_0
-  - clyent=1.2.2=py37_1
-  - conda=4.5.11=py37_0
-  - conda-build=3.15.1=py37_0
-  - conda-env=2.6.0=1
-  - conda-verify=3.1.0=py37_0
-  - cryptography=2.3.1=py37hc365091_0
-  - curl=7.61.0=h84994c4_0
-  - decorator=4.3.0=py37_0
-  - filelock=3.0.8=py37_0
-  - future=0.16.0=py37_0
-  - glob2=0.6=py37_0
-  - idna=2.7=py37_0
-  - ipython_genutils=0.2.0=py37_0
-  - jinja2=2.10=py37_0
-  - jsonschema=2.6.0=py37_0
-  - jupyter_core=4.4.0=py37_0
-  - libcurl=7.61.0=h1ad7b7a_0
-  - libedit=3.1.20170329=h6b74fdf_2
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
-  - libssh2=1.8.0=h9cfc8f7_4
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - markupsafe=1.0=py37h14c3975_1
-  - nbformat=4.4.0=py37_0
-  - ncurses=6.1=hf484d3e_0
-  - openssl=1.0.2p=h14c3975_0
-  - patchelf=0.9=hf484d3e_2
-  - pip=10.0.1=py37_0
-  - pkginfo=1.4.2=py37_1
-  - psutil=5.4.7=py37h14c3975_0
-  - pycosat=0.6.3=py37h14c3975_0
-  - pycparser=2.18=py37_1
-  - pyopenssl=18.0.0=py37_0
-  - pysocks=1.6.8=py37_0
-  - python=3.7.0=hc3d631a_0
-  - python-dateutil=2.7.3=py37_0
-  - pytz=2018.5=py37_0
-  - pyyaml=3.13=py37h14c3975_0
-  - readline=7.0=h7b6447c_5
-  - requests=2.19.1=py37_0
-  - ruamel_yaml=0.15.46=py37h14c3975_0
-  - setuptools=40.2.0=py37_0
-  - six=1.11.0=py37_1
-  - sqlite=3.24.0=h84994c4_0
-  - tk=8.6.8=hbc83047_0
-  - tqdm=4.25.0=py37h28b3542_0
-  - traitlets=4.3.2=py37_0
-  - urllib3=1.23=py37_0
-  - wheel=0.31.1=py37_0
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=had09818_2
-  - zlib=1.2.11=ha838bed_2
-
+  - anaconda-client
+  - conda-build
+  - conda-verify
