--- a/r-rock/meta.yaml
+++ b/r-rock/meta.yaml
@@ -9,8 +9,8 @@ package:
 
 source:
 
-  git_url: https://github.com/umccr/rock
-  git_tag: 0.0.1
+  git_url: https://github.com/pdiakumis/rock
+  git_tag: 0.0.2
 
 build:
   merge_build_host: True  # [win]
@@ -31,8 +31,6 @@ requirements:
 
   host:
     - r-base
-    - bioconductor-genomicranges
-    - bioconductor-omiccircos
     - r-dplyr
     - r-ggplot2
     - r-glue
@@ -47,8 +45,6 @@ requirements:
 
   run:
     - r-base
-    - bioconductor-genomicranges
-    - bioconductor-omiccircos
     - r-dplyr
     - r-ggplot2
     - r-glue
@@ -74,7 +70,8 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: https://github.com/umccr/rock
+  home: https://github.com/pdiakumis/rock
   license: MIT + file LICENSE
   summary: Contains functions for bioinformatic analyses.
   license_family: MIT
+
