--- a/r-pebbles/meta.yaml
+++ b/r-pebbles/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.0.1' %}
+{% set version = '0.0.2' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -9,8 +9,8 @@ package:
 
 source:
 
-  git_url: https://github.com/umccr/pebbles
-  git_tag: 0.0.1
+  git_url: https://github.com/pdiakumis/pebbles
+  git_tag: 0.0.2
 
 build:
   merge_build_host: True  # [win]
@@ -47,29 +47,9 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: https://github.com/umccr/pebbles
+  home: https://github.com/pdiakumis/pebbles
   license: MIT + file LICENSE
   summary: Contains cancer genomics datasets for running tests and examples in the rock R package
-    (https://github.com/umccr/rock).
+    (https://github.com/pdiakumis/rock).
   license_family: MIT
 
-# The original CRAN metadata for this package was:
-
-# Package: pebbles
-# Version: 0.0.1
-# Title: Datasets for running tests and examples in the rock R package
-# Description: Contains cancer genomics datasets for running tests and examples in the rock R package (https://github.com/umccr/rock).
-# Authors@R: person("Peter", "Diakumis", email = "peterdiakumis@gmail.com", role = c("cre"))
-# URL: https://github.com/umccr/pebbles
-# BugReports: https://github.com/umccr/pebbles/issues
-# License: MIT + file LICENSE
-# Encoding: UTF-8
-# LazyData: true
-# ByteCompile: true
-# RoxygenNote: 6.0.1
-# Depends: R (>= 3.0.0)
-# Roxygen: list(markdown = TRUE)
-
-# See
-# http://docs.continuum.io/conda/build.html for
-# more information about meta.yaml
