--- a/r-rock/meta.yaml
+++ b/r-rock/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.0.1' %}
+{% set version = '0.0.3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -10,7 +10,7 @@ package:
 source:
 
   git_url: https://github.com/pdiakumis/rock
-  git_tag: 0.0.2
+  git_tag: 0.0.3
 
 build:
   merge_build_host: True  # [win]
@@ -31,6 +31,7 @@ requirements:
 
   host:
     - r-base
+    - r-bedr
     - r-dplyr
     - r-ggplot2
     - r-glue
@@ -41,10 +42,10 @@ requirements:
     - r-scales
     - r-tibble
     - r-tidyr
-    - r-vcfr
 
   run:
     - r-base
+    - r-bedr
     - r-dplyr
     - r-ggplot2
     - r-glue
@@ -55,7 +56,6 @@ requirements:
     - r-scales
     - r-tibble
     - r-tidyr
-    - r-vcfr
 
 test:
   commands:
