--- a/r-configr/meta.yaml
+++ b/r-configr/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.3.3' %}
+{% set version = '0.3.5' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -11,12 +11,13 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/configr_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/configr/configr_{{ version }}.tar.gz
-  sha256: a283635e688be27f326c98adc1229087c07c1a3377a194f6aa660a283501ca21
+  sha256: 43a19fa4920f2265ac4b2e03de36c5e135d1c97dfdc1fecee0b061ee92fa8ee2
 
 build:
   merge_build_host: True  # [win]
   # If this is a new build for the same version, increment the build number.
   number: 0
+  # no skip
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -26,7 +27,7 @@ build:
 # Suggests: testthat, knitr, rmarkdown, prettydoc
 requirements:
   build:
-    - {{posix}}zip               # [win]
+    - {{ posix }}zip               # [win]
 
   host:
     - r-base
@@ -60,20 +61,24 @@ test:
 
 about:
   home: https://github.com/Miachol/configr
-  license: MIT + file LICENSE
-  summary: ' Implements the JSON, INI, YAML and TOML parser for R setting and writing of configuration
-    file. The functionality of this package is similar to that of package ''config''. '
+
+  license: MIT
+  summary: Implements the JSON, INI, YAML and TOML parser for R setting and writing of configuration
+    file. The functionality of this package is similar to that of package 'config'.
 
   license_family: MIT
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'
+    - LICENSE
 
 # The original CRAN metadata for this package was:
 
 # Package: configr
 # Type: Package
 # Title: An Implementation of Parsing and Writing Configuration File (JSON/INI/YAML/TOML)
-# Version: 0.3.3
+# Version: 0.3.5
 # Authors@R: person("Jianfeng", "Li", email = "lee_jianfeng@sjtu.edu.cn", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2349-208X"))
-# Description:  Implements the JSON, INI, YAML and TOML parser for R setting and writing of configuration file. The functionality of this package is similar to that of package 'config'.
+# Description: Implements the JSON, INI, YAML and TOML parser for R setting and writing of configuration file. The functionality of this package is similar to that of package 'config'.
 # Depends: R (>= 3.3.0)
 # URL: https://github.com/Miachol/configr
 # BugReports: https://github.com/Miachol/configr/issues
@@ -81,16 +86,16 @@ about:
 # Encoding: UTF-8
 # LazyData: true
 # Imports: jsonlite (>= 1.2), ini (>= 0.2), yaml (>= 2.1.3), RcppTOML (>= 0.1.3), stringr (>= 1.2.0), utils, glue
-# RoxygenNote: 6.0.1
+# RoxygenNote: 7.1.0
 # Suggests: testthat, knitr, rmarkdown, prettydoc
 # VignetteBuilder: knitr
 # NeedsCompilation: no
-# Packaged: 2018-06-22 14:19:51 UTC; ljf
+# Packaged: 2020-07-17 09:24:13 UTC; apple
 # Author: Jianfeng Li [aut, cre] (<https://orcid.org/0000-0003-2349-208X>)
 # Maintainer: Jianfeng Li <lee_jianfeng@sjtu.edu.cn>
 # Repository: CRAN
-# Date/Publication: 2018-06-22 15:12:57 UTC
+# Date/Publication: 2020-07-17 10:10:02 UTC
 
 # See
-# http://docs.continuum.io/conda/build.html for
+# https://docs.conda.io/projects/conda-build for
 # more information about meta.yaml
