--- a/r-summarywidget/meta.yaml
+++ b/r-summarywidget/meta.yaml
@@ -16,6 +16,7 @@ build:
   merge_build_host: True  # [win]
   # If this is a new build for the same version, increment the build number.
   number: 0
+  # no skip
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -25,9 +26,9 @@ build:
 # Suggests: knitr, rmarkdown, DT
 requirements:
   build:
-    - {{posix}}filesystem        # [win]
-    - {{posix}}git
-    - {{posix}}zip               # [win]
+    - {{ posix }}filesystem        # [win]
+    - {{ posix }}git
+    - {{ posix }}zip               # [win]
 
   host:
     - r-base
@@ -55,11 +56,16 @@ test:
 
 about:
   home: https://github.com/kent37/summarywidget
-  license: MIT + file LICENSE
+
+  license: MIT
   summary: SummaryWidget displays a single statistic derived from a linked table. It's primary
     use is with the crosstalk package. Used with crosstalk, a summarywidget displays
     a value which updates as the data selection changes.
+
   license_family: MIT
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'
+    - LICENSE
 
 # The original CRAN metadata for this package was:
 
@@ -81,5 +87,5 @@ about:
 # VignetteBuilder: knitr
 
 # See
-# http://docs.continuum.io/conda/build.html for
+# https://docs.conda.io/projects/conda-build for
 # more information about meta.yaml
