--- a/environment.yaml
+++ b/environment.yaml
@@ -6,5 +6,5 @@ dependencies:
   - anaconda-client
   - conda-build
   - conda-verify
-  - python
-  - r-base ==4.0.2
+  - python >=3.7
+  - r-base >=4.0
